--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ExternalApis":{
+    "BaseUrl": "https://jsonplaceholder.typicode.com/"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
