--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,7 @@
 {
-  "ExternalApis":{
-    "BaseUrl": "https://jsonplaceholder.typicode.com/"
+  "ExternalApis": {
+    "Usuarios": "https://jsonplaceholder.typicode.com/users",
+    "Posts": "https://jsonplaceholder.typicode.com/posts"
   },
   "Logging": {
     "LogLevel": {
